(executable
 (name publish)
 (modules publish)
 (libraries nats lwt.unix lwt_ppx)
 (preprocess
  (pps lwt_ppx)))

(executable
 (name subscribe)
 (modules subscribe)
 (libraries nats lwt.unix lwt_ppx)
 (preprocess
  (pps lwt_ppx)))

(executable
 (name request)
 (modules request)
 (libraries nats lwt.unix lwt_ppx)
 (preprocess
  (pps lwt_ppx)))
